--- a/Neolution.CodeAnalysis.ReducedRuleset.nuspec
+++ b/Neolution.CodeAnalysis.ReducedRuleset.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>Neolution.CodeAnalysis.ReducedRuleset</id>
-    <version>1.0.0</version>
+    <version>${version.txt}</version>
     <title>Neolution Code Analysis Reduced Ruleset</title>
     <authors>Sandro Ciervo</authors>
     <owners>Neolution AG</owners>
