--- a/Neolution.CodeAnalysis.TestsRuleset.nuspec
+++ b/Neolution.CodeAnalysis.TestsRuleset.nuspec
@@ -7,6 +7,7 @@
     <authors>Sandro Ciervo</authors>
     <owners>Neolution AG</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <developmentDependency>true</developmentDependency>
     <description>Configures Code Analysis for Neolution Test Projects.</description>
     <dependencies>
       <dependency id="StyleCop.Analyzers" version="1.0.2" />
