--- a/Neolution.CodeAnalysis.nuspec
+++ b/Neolution.CodeAnalysis.nuspec
@@ -10,14 +10,15 @@
     <developmentDependency>true</developmentDependency>
     <description>Configures Code Analysis for Neolution Projects</description>
     <dependencies>
-      <dependency id="StyleCop.Analyzers" version="1.1.1-rc.94" />
-      <dependency id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.6.3" />
-      <dependency id="SonarAnalyzer.CSharp" version="7.11.0.8083" />
+      <dependency id="StyleCop.Analyzers" version="1.1.118" />
+      <dependency id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.9.2" />
+      <dependency id="SonarAnalyzer.CSharp" version="7.14.0.8411" />
     </dependencies>
   </metadata>
   <files>
     <file src="build\Neolution.CodeAnalysis.targets" target="build\Neolution.CodeAnalysis.targets" />
-    <file src="Neolution.ruleset" target="Neolution.ruleset" />
+    <file src="Neolution.Debug.ruleset" target="Neolution.Debug.ruleset" />
+    <file src="Neolution.Release.ruleset" target="Neolution.Release.ruleset" />
     <file src="stylecop.json" target="stylecop.json" />
   </files>
 </package>
