--- a/Neolution.CodeAnalysis.TestsRuleset.nuspec
+++ b/Neolution.CodeAnalysis.TestsRuleset.nuspec
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>Neolution.CodeAnalysis.TestsRuleset</id>
@@ -11,8 +11,8 @@
     <description>Configures Code Analysis for Neolution Test Projects.</description>
     <dependencies>
       <dependency id="StyleCop.Analyzers" version="1.1.118" />
-      <dependency id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.9.3" />
-      <dependency id="SonarAnalyzer.CSharp" version="7.14.0.8411" />
+      <dependency id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.9.4" />
+      <dependency id="SonarAnalyzer.CSharp" version="7.15.0.8572" />
     </dependencies>
   </metadata>
   <files>
