--- a/Neolution.CodeAnalysis.TestsRuleset.nuspec
+++ b/Neolution.CodeAnalysis.TestsRuleset.nuspec
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>Neolution.CodeAnalysis.TestsRuleset</id>
@@ -12,7 +12,7 @@
     <dependencies>
       <dependency id="StyleCop.Analyzers" version="1.1.118" />
       <dependency id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.9.4" />
-      <dependency id="SonarAnalyzer.CSharp" version="7.15.0.8572" />
+      <dependency id="SonarAnalyzer.CSharp" version="7.16.0.8981" />
     </dependencies>
   </metadata>
   <files>
