Call .ToLower() on path strings for Linux deployments
When restoring the packages Nuget always restores to all lowercase paths. Because Linux is case-sensitive for file paths it then won't find paths that are in mixed cases.

--- a/Neolution.CodeAnalysis.nuspec
+++ b/Neolution.CodeAnalysis.nuspec
@@ -4,7 +4,7 @@
     <id>Neolution.CodeAnalysis</id>
     <version>{{version.txt}}</version>
     <title>Neolution Code Analysis</title>
-    <authors>Sandro Ciervo</authors>
+    <authors>Neolution AG</authors>
     <owners>Neolution AG</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <developmentDependency>true</developmentDependency>
