--- a/Neolution.CodeAnalysis.TestsRuleset.nuspec
+++ b/Neolution.CodeAnalysis.TestsRuleset.nuspec
@@ -4,13 +4,13 @@
     <id>Neolution.CodeAnalysis.TestsRuleset</id>
     <version>{{version.txt}}</version>
     <title>Neolution Code Analysis for Test Projects</title>
-    <authors>Sandro Ciervo</authors>
+    <authors>Neolution AG</authors>
     <owners>Neolution AG</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <developmentDependency>true</developmentDependency>
     <description>Configures Code Analysis for Neolution Test Projects.</description>
     <dependencies>
-      <dependency id="StyleCop.Analyzers" version="1.1.118" />
+      <dependency id="StyleCop.Analyzers" version="1.2.0-beta.164" />
       <dependency id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.9.8" />
       <dependency id="SonarAnalyzer.CSharp" version="8.0.0.9566" />
     </dependencies>
