--- a/.github/workflows/dotnet-publish.yml
+++ b/.github/workflows/dotnet-publish.yml
@@ -6,7 +6,10 @@ on:
   push:
     branches:
       - main
-
+env:
+  ARTIFACTS_FEED_URL: https://api.nuget.org/v3/index.json
+  DOTNET_VERSION: "6.x"
+  
 jobs:
   publish:
     name: build, pack & publish
@@ -25,7 +28,6 @@ jobs:
       - name: Determine Version
         uses: gittools/actions/gitversion/execute@v0.9.7
         
-      # Run dotnet build and package
       - name: Replace version number
         run: 'sed -i -e "s/{{NuGetVersion}}/$GITVERSION_NUGETVERSION/g" *.nuspec **/*.targets'
 
@@ -36,8 +38,17 @@ jobs:
       - name: dotnet build and publish
         run: "nuget pack Neolution.CodeAnalysis.nuspec"
           
+      # Setup .NET Core SDK
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: ${{ env.DOTNET_VERSION }}
+          source-url: ${{ env.ARTIFACTS_FEED_URL }}
+        env:
+          NUGET_AUTH_TOKEN: ${{ secrets.NUGET_API_KEY_NEOLUTION }}
+          
       # Publish the package to Azure Artifacts
-      #- name: "dotnet publish"
-      #  run: dotnet nuget push --skip-duplicate -k $NUGET_AUTH_TOKEN  **/bin/Release/*.nupkg
-      #  env:
-      #    NUGET_AUTH_TOKEN: ${{ secrets.NUGET_API_KEY_NEOLUTION }}
+      - name: "dotnet publish"
+        run: dotnet nuget push --skip-duplicate -k $NUGET_AUTH_TOKEN  **/bin/Release/*.nupkg
+        env:
+          NUGET_AUTH_TOKEN: ${{ secrets.NUGET_API_KEY_NEOLUTION }}
