Update README.md Remove old and IDE* rules
Move everything into the right space


Fix dependencies


Also deliver the globalconfig file


dotfiles do not seem to be supported by nuspec


corrections


Revert "Remove old and IDE* rules"

This reverts commit 65a95470bb444e1122ef7cd3f070ed2f32168964.

deprecated rule


Add the exceptions back to the globalconfig


Update rules


Drop IDE0055 rule


Adjust ruleset according recommended set + our overrides


Use suggestion instead of info


Somehow CS1591 was removed along the migration


Suppress S2857

Has a confirmed FP that makes it unusable when using `nameof()` https://github.com/SonarSource/sonar-dotnet/issues/6126
All explanations in the globalanalyzer file


Get ready for release


Refactor build files and update global configuration

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,7 +26,7 @@ jobs:
         uses: gittools/actions/gitversion/execute@v0.9.7
         
       - name: Replace version number in nuspec files
-        run: 'sed -i -e "s/{{NuGetVersion}}/$GITVERSION_NUGETVERSION/g" *.nuspec **/*.targets'
+        run: 'sed -i -e "s/{{NuGetVersion}}/$GITVERSION_NUGETVERSION/g" *.nuspec **/*.props'
 
       - name: Setup NuGet.exe for use with actions
         uses: NuGet/setup-nuget@v1.0.5
