--- a/.github/workflows/dotnet-publish.yml
+++ b/.github/workflows/dotnet-publish.yml
@@ -2,10 +2,8 @@
 name: Publish NuGet package
 
 on:
-  push:
-    tags: 
-      - 'v*.*.*'
-  workflow_dispatch:
+  release:
+    types: [published]
 
 env:
   ARTIFACTS_FEED_URL: https://api.nuget.org/v3/index.json
@@ -16,20 +14,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:    
       - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0 # Needed for GitVersion to function correctly
-          
-      - name: Install GitVersion
-        uses: gittools/actions/gitversion/setup@v0.9.7
-        with:
-          versionSpec: '5.x'
-          
-      - name: Determine version number with GitVersion
-        uses: gittools/actions/gitversion/execute@v0.9.7
+        uses: actions/checkout@v3
         
       - name: Replace version number in nuspec files
-        run: 'sed -i -e "s/{{NuGetVersion}}/$GITVERSION_NUGETVERSION/g" *.nuspec **/*.targets'
+        run: 'sed -i -e "s/{{NuGetVersion}}/${{ github.ref }}/g" *.nuspec **/*.targets'
 
       - name: Setup NuGet.exe for use with actions
         uses: NuGet/setup-nuget@v1.0.5
@@ -40,7 +28,7 @@ jobs:
       - name: Create TestsRuleset package
         run: nuget pack Neolution.CodeAnalysis.TestsRuleset.nuspec
           
-      - name: Push all packages to Nuget.org
-        run: dotnet nuget push --skip-duplicate -s $ARTIFACTS_FEED_URL -k $NUGET_AUTH_TOKEN  **/*.nupkg
-        env:
-          NUGET_AUTH_TOKEN: ${{ secrets.NUGET_API_KEY_NEOLUTION }}
+      #- name: Push all packages to Nuget.org
+      #  run: dotnet nuget push --skip-duplicate -s $ARTIFACTS_FEED_URL -k $NUGET_AUTH_TOKEN  **/*.nupkg
+      #  env:
+      #    NUGET_AUTH_TOKEN: ${{ secrets.NUGET_API_KEY_NEOLUTION }}
