--- a/.github/workflows/dotnet-publish.yml
+++ b/.github/workflows/dotnet-publish.yml
@@ -15,9 +15,13 @@ jobs:
     steps:    
       - name: Checkout
         uses: actions/checkout@v3
-        
+      
+      - name: Get the NuGet version number
+        id: get_version
+        run: echo NUGET_VERSION=${GITHUB_REF#refs/tags/v} >> $GITHUB_ENV
+      
       - name: Replace version number in nuspec files
-        run: 'sed -i -e "s/{{NuGetVersion}}/${{ github.ref }}/g" *.nuspec **/*.targets'
+        run: 'sed -i -e "s/{{NuGetVersion}}/$NUGET_VERSION/g" *.nuspec **/*.targets'
 
       - name: Setup NuGet.exe for use with actions
         uses: NuGet/setup-nuget@v1.0.5
