--- a/.github/workflows/dotnet-publish.yml
+++ b/.github/workflows/dotnet-publish.yml
@@ -16,8 +16,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       
-      - name: Get the NuGet version number
-        id: get_version
+      - name: Determine version for NuGet package
         run: echo NUGET_VERSION=${GITHUB_REF#refs/tags/v} >> $GITHUB_ENV
       
       - name: Replace version number in nuspec files
