--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,20 +13,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:    
       - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0 # Needed for GitVersion to function correctly
-                   
-      - name: Install GitVersion
-        uses: gittools/actions/gitversion/setup@v0.9.7
-        with:
-          versionSpec: '5.x'
-          
-      - name: Determine version number with GitVersion
-        uses: gittools/actions/gitversion/execute@v0.9.7
-        
+        uses: actions/checkout@v3
+      
+      - name: Determine version for NuGet package
+        run: echo NUGET_VERSION=${GITHUB_REF#refs/tags/v} >> $GITHUB_ENV
+      
       - name: Replace version number in nuspec files
-        run: 'sed -i -e "s/{{NuGetVersion}}/$GITVERSION_NUGETVERSION/g" *.nuspec **/*.targets'
+        run: 'sed -i -e "s/{{NuGetVersion}}/$NUGET_VERSION/g" *.nuspec **/*.targets'
 
       - name: Setup NuGet.exe for use with actions
         uses: NuGet/setup-nuget@v1.0.5
@@ -36,4 +29,3 @@ jobs:
           
       - name: Create TestsRuleset package
         run: nuget pack Neolution.CodeAnalysis.TestsRuleset.nuspec
-          
