--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,13 +16,13 @@ jobs:
         uses: actions/checkout@v3
       
       - name: Determine version for NuGet package
-        run: echo NUGET_VERSION=${GITHUB_REF#refs/tags/v} >> $GITHUB_ENV
+        run: echo NUGET_VERSION=$(date '+%Y.%m.%d-ci%H%M%S') >> $GITHUB_ENV  
       
       - name: Replace version number in nuspec files
         run: 'sed -i -e "s/{{NuGetVersion}}/$NUGET_VERSION/g" *.nuspec **/*.targets'
 
       - name: Setup NuGet.exe for use with actions
-        uses: NuGet/setup-nuget@v1.0.5
+        uses: NuGet/setup-nuget@v1.2.0
           
       - name: Create main package
         run: nuget pack Neolution.CodeAnalysis.nuspec
