--- a/.release-it.json
+++ b/.release-it.json
@@ -14,7 +14,7 @@
       "filename": "CHANGELOG.md",
       "addVersionUrl": true,
       "addUnreleased": true,
-      "strictLatest": false
+      "strictLatest": true
     }
   },
   "hooks": {
