--- a/Neolution.CodeAnalysis.TestsRuleset.nuspec
+++ b/Neolution.CodeAnalysis.TestsRuleset.nuspec
@@ -18,7 +18,8 @@
   </metadata>
   <files>
     <file src="build\Neolution.CodeAnalysis.TestsRuleset.props" target="build\Neolution.CodeAnalysis.TestsRuleset.props" />
-    <file src="build\Neolution.Tests.globalconfig" target="build\Neolution.Tests.globalconfig" />
+    <file src="build\Neolution.CodeAnalysis.globalconfig" target="build\Neolution.CodeAnalysis.globalconfig" />
+    <file src="build\Neolution.CodeAnalysis.TestsRuleset.globalconfig" target="build\Neolution.CodeAnalysis.TestsRuleset.globalconfig" />
     <file src="build\stylecop.json" target="build\stylecop.json" />
     <file src="README.md" target="docs\" />
   </files>
