Downgrade rules after discussion with team

--- a/.github/workflows/cd-production.yml
+++ b/.github/workflows/cd-production.yml
@@ -35,3 +35,12 @@ jobs:
         run: dotnet nuget push --skip-duplicate -s $ARTIFACTS_FEED_URL -k $NUGET_AUTH_TOKEN **/*.nupkg
         env:
           NUGET_AUTH_TOKEN: ${{ secrets.NUGET_API_KEY_NEOLUTION }}
+        
+  notify:
+    needs: [publish]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: neolution-ch/action-release-notifier@v1
+        with:
+          slack-token: ${{ secrets.SLACK_RELEASE_NOTIFIER_TOKEN }}
+          slack-channel-ids: "CD34NHYN6"
