--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,8 +8,7 @@ on:
   workflow_dispatch:
    
 jobs:
-  publish:
-    name: build & pack
+  pack:
     runs-on: ubuntu-latest
     steps:    
       - name: Checkout
