--- a/.github/workflows/cd-production.yml
+++ b/.github/workflows/cd-production.yml
@@ -42,4 +42,5 @@ jobs:
       - uses: neolution-ch/action-release-notifier@v1
         with:
           slack-token: ${{ secrets.SLACK_RELEASE_NOTIFIER_TOKEN }}
+          # tech-announcements channel
           slack-channel-ids: "C05DR8P010A"
