--- a/.github/workflows/cd-production.yml
+++ b/.github/workflows/cd-production.yml
@@ -42,5 +42,4 @@ jobs:
       - uses: neolution-ch/action-release-notifier@v1
         with:
           slack-token: ${{ secrets.SLACK_RELEASE_NOTIFIER_TOKEN }}
-          # tech-announcements channel
-          slack-channel-ids: "C05DR8P010A"
+          slack-channel-ids: ${{ vars.SLACK_CHANNEL_ID_RELEASE_ANNOUNCEMENTS }}
