--- a/Neolution.CodeAnalysis.TestsRuleset.nuspec
+++ b/Neolution.CodeAnalysis.TestsRuleset.nuspec
@@ -12,7 +12,7 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <developmentDependency>true</developmentDependency>
     <dependencies>
-      <dependency id="StyleCop.Analyzers" version="1.2.0-beta.507" />
+      <dependency id="StyleCop.Analyzers.Unstable" version="1.2.0.556" />
       <dependency id="SonarAnalyzer.CSharp" version="8.56.0.67649" />
     </dependencies>
   </metadata>
